# SoulX-Podcast

./: main.py  pyproject.toml  readme.md  requirements.txt
cli/: podcast.py
example/: infer_dialogue.sh  infer_tts.sh
example/podcast_script/: script_english.json
soulxpodcast/: __init__.py
