[project]
name = "soulx-podcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.10.1",
    "diffusers>=0.36.0",
    "einops>=0.8.2",
    "gradio>=6.5.1",
    "hf-transfer>=0.1.9",
    "librosa>=0.11.0",
    "numpy>=2.3.5",
    "onnxruntime>=1.23.2",
    "onnxruntime-gpu>=1.23.2",
    "s3tokenizer>=0.3.0",
    "scipy>=1.17.0",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "torchvision==0.22.1",
    "transformers==4.57.1",
    "triton>=3.0.0",
]
